Fri Apr  1 10:43:10 2005  Rich Seibel  <seibel_r@ociweb.com>
        
        Moving updates for Mac made by Paul and Chad  to get it to work.

        * TAO/orbsvcs/orbsvcs/FtRtEvent.mpc:
          Remove PortableGroup_Simple_DSC from this library as it already 
          picks it up from the FTORB_Utils library.  This was causing 
          link problems on MacOS.  Removed an extraneous comment and 
          macros setting.

        * TAO/orbsvcs/orbsvcs/PortableGroup.mpc:
          Added the PortableGroup_Simple_DS.idl and remove an old
          dynamicflags setting.  Also Remove an unnecessary dependency 
          from FTORB.

        * TAO/orbsvcs/orbsvcs/PortableGroup_Simple_export.h:
          Removed this file.

        * TAO/orbsvcs/orbsvcs/FTORB.mpc:
          Remove PortableGroup_Simple_DSC from the FTORB library.

Fri Apr  1 12:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/RtEC/MCast/MCast.cpp:
          Fixed compile error

Fri Apr  1 00:27:15 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/append.cpp (append):

	  Fixed emulated exception error.

Thu Mar 31 19:46:09 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/TypeCode_Value_Field.inl:

	  Full member specializations must be preceeded by a "template<>"
	  declaration.  Addresses build warnings exhibited by HP aC++.

Thu Mar 31 14:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase.cpp:
          Report which unknown type has been received

Thu Mar 31 13:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/EventChannel.cpp:
          Fixed compile errors

Thu Mar 31 13:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.cpp:
          Fixed compile errors

Thu Mar 31 13:21:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TypeCode_Case.inl: